@@ -4,8 +4,6 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - plugin mgr install doesn't update existing plugins
-
-last char of line - C+next
 - backup time distance setting
 - {{{foo}}}\n{{{bar}}}; put cursor at start, enter
 - chunk cache state during a buffer event is too fragile, unnecessary
@@ -55,7 +53,6 @@ invalidation being performed
   						MiscUtilities.quicksort(favorites,
   							new VFS.DirectoryEntryCompare());
 - history text field tweak
-- search dialog: auto-focus fields show last values
 
 - aborts not always fired
 - globalColors setting:
